--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "bert-tokenizer": "^1.1.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
